# fallen_london_chronicler

./: .gitignore  README.md  build_windows.bat  config.default.env  gunicorn.conf.py  pyproject.toml  run.sh
fallen_london_chronicler/: __main__.py  aggregator.py  app.py  auth.py  config.py  db.py  google_docs.py  images.py  log.py  recording.py  utils.py
fallen_london_chronicler/api/: submit.py
fallen_london_chronicler/export/: base.py  google_docs.py  html.py
fallen_london_chronicler/model/: __init__.py  api_key.py  area.py  base.py  branch.py  challenge.py  outcome.py  quality.py  secondaries.py  setting.py  storylet.py  user.py  utils.py
fallen_london_chronicler/schema/: __init__.py  area.py  misc.py  possessions.py  requests.py  response.py  setting.py  storylet.py
fallen_london_chronicler/web/: __init__.py  admin.py  area.py  areas.py  branch.py  home.py  storylet.py  templates.py
resources/: userscript.js
resources/static/css/: style.css
resources/templates/: admin.html  area.html  areas.html  base.html  branch.html  home.html  macros.html  storylet.html
